# Ninja-Cat

./: .gitignore  .mcp.json  README.md  ninjacat.bundle  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: doctrine-vault-operator.md  quant-algo-implementer.md  quant-backtest-validator.md  quant-data-engineer.md  quant-strategy-architect.md  quant-viz-verifier.md
.claude/hooks/: session-start-swarm.json
docs/: links.txt
docs/adr/: ADR-001-verite-donnee-doctrine-moteur.md  ADR-002-couche-canonique-neutre.md  ADR-003-port-memoire-hexagonal.md  ADR-004-port-ingestion-hexagonal.md  ADR-005-swarm-claude-flow-persistant.md  ADR-006-acces-cdp-tradingview-port-9223.md  ADR-007-coquille-moteur-couture-doctrine.md  ADR-008-port-execution-paper-trader.md
docs/specs/: ABA_5BARRES_SPEC.md  OB_DETECTION_SPEC.md  SWING_SEQUENCE_SPEC.md
ressources/scripts_pin/: OB_Detector_v2.13.txt
ressources/scripts_pin/OB_v3/: 00_backup_structure_pivots_user.txt  01_trace_structure_cassage.txt
scripts/validation/: validate_force_tient_casse.py
scripts/validation/out_full/: events.csv  metrics.json
src/ninja_cat/: __init__.py  config.py  engine.py  execution.py  ingestion.py  memory.py  schema.py
src/ninja_cat/adapters/: __init__.py  _normalize.py  agentdb.py  ccxt_source.py  file_replay.py  paper_trader.py
tests/: test_ccxt_source.py  test_engine.py  test_execution.py  test_file_replay.py  test_ingestion.py  test_memory.py  test_smoke.py
