[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ninja-cat"
version = "0.0.1"
description = "Ninja-Cat — plateforme d'aide à la décision pour le trading (quant)"
requires-python = ">=3.10"
# Dépendances runtime CŒUR : voir requirements.txt (épinglées).

[project.optional-dependencies]
# Performance — uniquement si un hot path est mesuré lent (cf. doctrine).
perf = ["numba==0.65.1"]
# Temps réel — flux live (ccxt.pro est bundlé dans ccxt ; websockets = transport).
# websocket-client : transport CDP synchrone de l'adapter d'exécution Paper Trader.
live = ["websockets==15.0.1", "websocket-client==1.8.0"]
# Outillage de dev / tests.
dev = ["pytest==8.4.1", "pytest-cov==6.2.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
